public/sass/partials/_forms.scss
input,
textarea {
  width: 100%;
  padding: 10px;
  border: 1px solid $grey;
  &.input {
    &--error {
      border-color: red;
    }
  }
}

label {
  padding: 10px 0;
  display: block;
}

.form {
  background: white;
  padding: 2rem;
  box-shadow: $grad;
  & + .form {
    margin-top: 4rem;
  }
  // I know this isn't bem but meh
  h2 {
    margin: 0;
    font-size: 2rem;
    padding-bottom: 2rem;
    margin-bottom: 2rem;
    border-bottom: 1px solid $grey;
  }
}

.radioContainer {
  input[type="radio"] {
    display: none;
  }
  float: left;
}
.radioContainer label {
  position: relative;
  margin-left: 60px;
  margin-right: 80px;
}

.radioContainer span::before,
.radioContainer span::after {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  margin: auto;
}

.radioContainer span.radio:hover {
  cursor: pointer;
}
.radioContainer span.radio::before {
  left: -52px;
  width: 45px;
  height: 25px;
  background-color: #a8aac1;
  border-radius: 50px;
}
.radioContainer span.radio::after {
  left: -49px;
  width: 17px;
  height: 17px;
  border-radius: 10px;
  background-color: #6c788a;
  transition: left 0.25s, background-color 0.25s;
}
input[type="radio"]:checked + label span.radio::after {
  left: -27px;
  background-color: $yellow;
}

